force-app/main/default/objects/Data_Templates__c/Data_Templates__c.object-meta.xml
<CustomObject>
    <label>Data Template</label>
    <nameField>
        <label>Data Templates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>