force-app/main/default/objects/Data_Templates__c/fields/Action_Delete_Record__c.field-meta.xml
<CustomField>
    <fullName>Action_Delete_Record__c</fullName>
    <formula>&apos;Delete&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action (Delete Record)</label>
    <type>Text</type>
</CustomField>