force-app/main/default/objects/Data_Templates__c/fields/Action_New_Record__c.field-meta.xml
<CustomField>
    <fullName>Action_New_Record__c</fullName>
    <formula>&apos;Insert&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action (New Record)</label>
    <type>Text</type>
</CustomField>