force-app/main/default/objects/Data_Templates__c/fields/Action_Update_Record__c.field-meta.xml
<CustomField>
    <fullName>Action_Update_Record__c</fullName>
    <formula>&apos;Update&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action (Update Record)</label>
    <type>Text</type>
</CustomField>