force-app/main/default/objects/Data_Templates__c/fields/Data_Upload_Info__c.field-meta.xml
<CustomField>
    <fullName>Data_Upload_Info__c</fullName>
    <label>Data Upload Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>