force-app/main/default/objects/Data_Templates__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Product_Mapping__c</fullName>
            </value>
            <value>
                <fullName>Employee_Customer_Assignment__c</fullName>
            </value>
            <value>
                <fullName>Child_beat__c</fullName>
            </value>
            <value>
                <fullName>Junction_Beat__c</fullName>
            </value>
            <value>
                <fullName>Calendar_beat__c</fullName>
            </value>
            <value>
                <fullName>PJP_Item__c</fullName>
            </value>
            <value>
                <fullName>Invoice_item__c</fullName>
            </value>
            <value>
                <fullName>Price_Book__c</fullName>
            </value>
            <value>
                <fullName>Password Reset</fullName>
            </value>
            <value>
                <fullName>Sales_Channel_To_SKU__c</fullName>
            </value>
            <value>
                <fullName>TargetActuals__c</fullName>
            </value>
            <value>
                <fullName>Employee__c</fullName>
            </value>
            <value>
                <fullName>Product__c</fullName>
            </value>
            <value>
                <fullName>PBIS_Target__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>